<resources>
    <string name="app_name"><font color='#FFFFFF'>Find "N" Feast</font></string>

    <!--Login and Signup-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="next_button">Next</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password_confirm">Confirm Password</string>


    <!--Information Page-->
    <string name="info">Information About App</string>
    <string name="info_txt">This app is a restaurant locator that will find restaurants based on your current location and
        favourite food. You can search for food in different locations and give and look for reviews for any restaurant
    </string>
    <string name="Names">By:\n\nAbinash Narendiran\nSaijeeshan Ketheeswaran\nJoseph Robertson</string>
    <string name="Copyright">"Copyright @ Abinash_Saijeeshan_Joseph"</string>
    <string name="info_back">Back</string>

    <!--User Questions-->
    <string name="ques_1">What is your favorite meal of the day?</string>
    <string name="ques_2">What is your usual price range when eating at a restaurant?</string>
    <string name="ques_3">What is favourite type of food?</string>
    <string name="option_1">Breakfast</string>
    <string name="option_2">Lunch</string>
    <string name="option_3">Dinner</string>
    <string name="option_8">Italian</string>
    <string name="option_9">Chinese</string>
    <string name="option_10">Thai</string>
    <string name="option_11">Mexican</string>
    <string name="option_12">Other</string>


    <!--Main Menu-->
    <string name="search">Search</string>
    <string name="nearby">Nearby</string>
    <string name="reservations">Reservations</string>
    <string name="chat">Chat</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>


    <!--Labels and Hint-->
    <string name="nearbyPlaces">Nearby Restaurants</string>
    <string name="price">Price</string>
    <string name="priceRange">Price Range:</string>
    <string name="description">Description:</string>
    <string name="phoneNumber">Phone Number:</string>
    <string name="rating2">Rating:</string>
    <string name="website">Website:</string>
    <string name="hours">Hours:</string>
    <string name="distance">Distance(in km):</string>
    <string name="search_restaurant">Restaurant Search</string>
    <string name="search_radius">Radius</string>
    <string name="search_address">Address</string>
    <string name="formatted_address">"House Number" "Road Name(No Abbreviation)", "City", "State or Province (Abbreviation)" "Postal Code"</string>

    <!--Review-->
    <string name="address">Address</string>
    <string name="nothing" />
    <string name="review">Review</string>
    <string name="rating">Rating</string>
    <string name="confirm_review">Confirm Review</string>
    <string name="cancel">Cancel</string>
    <string name="rate">Rate</string>
    <string name="your_rating">Your Rating:</string>
    <string name="world_rating">World Rating:</string>

    <!--Chat-->
    <string name="add_room_btn">ADD ROOM</string>
    <string name="main_title">Welcome to the Chat Room</string>
    <string name="send_btn">SEND</string>
    <string name="room_hint">Enter Room Name</string>
    <string name="message_hint">Enter Message Here</string>

    <string name="guest_login">Guest Login</string>
</resources>
