<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/info"
        android:textSize="16dp"
        android:textColor="@color/textColor"/>


    <TextView
        android:id="@+id/info_txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="@string/info_txt"
        android:layout_marginLeft="25dp"
        android:textSize="16dp"
        android:textColor="@color/textColor"/>

    <TextView
        android:id="@+id/Names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Names"
        android:layout_marginTop="60dp"
        android:textSize="16dp"
        android:layout_marginLeft="25dp"
        android:textColor="@color/textColor"/>

    <TextView
        android:id="@+id/Copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Copyright"
        android:layout_marginTop="60dp"
        android:textSize="16dp"
        android:layout_marginLeft="25dp"
        android:textColor="@color/textColor"/>


    <Button
        android:id="@+id/info_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:text="@string/info_back"
        android:textColor="@color/textColor"
        android:textSize="16dp"
        android:onClick="backInfo"/>

</LinearLayout>