<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/questions_background"
    tools:context=".UserQuesActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="60dp"
        android:text="@string/ques_1"
        android:textColor="@color/textColor"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/mealList"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/option_1"
            android:textColor="@color/textColor"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/option_2"
            android:textColor="@color/textColor"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/option_3"
            android:textColor="@color/textColor"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/ques_2"
        android:textColor="@color/textColor"
        android:textStyle="bold" />

    <EditText
        android:hint="min price"
        android:id="@+id/minPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:hint="max price"
        android:id="@+id/maxPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--<RadioGroup
        android:id="@+id/priceList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/option_4"
            android:textColor="@color/textColor"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/option_5"
            android:textColor="@color/textColor"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/option_6"
            android:textColor="@color/textColor"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/option_7"
            android:textColor="@color/textColor"
            android:textStyle="bold" />
    </RadioGroup>-->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/ques_3"
        android:textColor="@color/textColor"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/favouriteList"
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/option_8"
            android:textColor="@color/textColor"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/option_9"
            android:textColor="@color/textColor"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/option_10"
            android:textColor="@color/textColor"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/option_11"
            android:textColor="@color/textColor"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/option_12"
            android:textStyle="bold"
            android:textColor="@color/textColor" />
    </LinearLayout>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:background="@color/button_color"
        android:text="@string/signup_button"
        android:onClick="signUp"
        android:textColor="@android:color/background_light" />

</LinearLayout>