<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/signup_background"
    tools:context=".SignUpActivity">



    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:layout_marginRight="130dp"
        android:text="@string/first_name"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/first_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:ems="12"
        android:inputType="textPersonName"
        android:textColor="@color/textColor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="130dp"
        android:text="@string/last_name"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:ems="12"
        android:inputType="textPersonName"
        android:textStyle="bold"
        android:textColor="@color/textColor"/>


    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="152dp"
        android:text="@string/email"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:ems="12"
        android:inputType="textEmailAddress"
        android:textStyle="bold"
        android:textColor="@color/textColor"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="135dp"
        android:text="@string/password"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:ems="12"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:textColor="@color/textColor"/>

    <TextView
        android:id="@+id/password_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="100dp"
        android:text="@string/password_confirm"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/password_confirm_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:ems="12"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:textColor="@color/textColor"/>


    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="getNext"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@color/button_color"
        android:text="@string/next_button"
        android:textColor="@android:color/background_light" />

</LinearLayout>