<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NearbyActivity"
    android:background="@drawable/login_background">

    <TextView
        android:id="@+id/search_nearby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text = "@string/nearbyPlaces"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/textColor2"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text = "@string/price"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/textColor2"
        android:textSize="25dp"/>

    <Spinner
        android:id="@+id/price_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/textColor"
        android:gravity="center"
        android:padding="7dp"
        android:background="@color/textColor2"
        android:textSize="20dp"/>


    <Button
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:onClick="search_nearby_restaurants"
        android:background="@color/button_color"
        android:textColor="@color/textColor2"/>

</LinearLayout>