<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChatActivity"
    android:background="@drawable/signup_background">

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:onClick="insert_data"
        android:text= "@string/add_room_btn"
        android:textColor="@color/textColor2"
        android:background="@color/button_color" />

    <ListView
        android:id="@+id/roomView"
        android:layout_width="match_parent"
        android:layout_height="459dp"
        android:layout_below="@+id/addButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="6dp" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/main_title"
        android:textSize="25sp"
        android:textColor="@color/textColor2"/>

    <EditText
        android:id="@+id/roomInput"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="129dp"
        android:hint="@string/room_hint" />
</RelativeLayout>